# jobsearch

./: .gitignore  CLAUDE.md  LICENSE  PRODUCT.md  README.md  ROADMAP.md  applications.csv  com.vitalii.jobsearch.plist  issues.md  job_finder.py  master_cv.md  pipeline.py  push.sh  pyproject.toml  run.sh  run_daily.sh  search.sh  secrets.sh.example
.claude/: claude-security-guidance.md
api/: __init__.py  auth.py  cv.py  deps.py  main.py  matches.py  run.py  search_params.py
deploy/: com.vitalii.jobsearch.plist
docs/: ROADMAP.md
jobsearch/: __init__.py  config.py  cv.py  filters.py  finder.py  models.py  pipeline.py  render.py  scoring.py  sources.py  store.py  supabase_store.py
scripts/: push.sh  run.sh  run_daily.sh  search.sh
supabase/migrations/: 0001_init_schema.sql  0002_processed_jobs.sql  0003_grants.sql  0004_cvs_unique_user.sql  0005_search_params_unique_user.sql  0006_grant_authenticated_userstate.sql  0007_matches_denormalize_job.sql  (+5 more)
tests/: test_5d_results_screen.py  test_api_auth.py  test_api_cv.py  test_api_matches.py  test_api_run.py  test_api_search_params.py  test_assess_generate_split.py  test_async_run.py  test_combo_cap.py  test_dedup.py  test_dynamic_role_filter.py  test_filter_debug_instrumentation.py  test_filters.py  test_jobspy_fresh.py  test_locations_normalize.py  test_models.py  test_render.py  test_rls_isolation.py  test_scoring.py  test_store.py  test_suggest_roles.py  test_supabase_store.py  test_web_search_schemas.py
web/: .env.local.example  .gitignore  CLAUDE.md  package-lock.json  package.json  proxy.ts
web/lib/: api.ts  (+2 more)
(+14 files in other folders)
