[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jobsearch"
version = "0.1.0"
description = "Remote/B2B job collection + AI résumé-tailoring pipeline (JobSpy/RemoteOK/WWR/Remotive/ATS + Claude)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-jobspy",
    "feedparser",
    "requests",
    "python-docx",
    "supabase",
]

[project.optional-dependencies]
dev = ["pytest"]
api = ["fastapi", "uvicorn[standard]", "python-multipart", "pypdf"]

[project.scripts]
jobsearch-find = "jobsearch.finder:main"
jobsearch-tailor = "jobsearch.pipeline:main"

[tool.setuptools]
packages = ["jobsearch", "api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
